# BlockwiseDistill-CV

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
saved_models/: student_model_20250812_223222.pth
src/: block_distill.py  data.py  models.py  train.py  utils.py
