[project]
name = "blockwisedistill-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.2",
    "torch>=2.0",
    "torchvision>=0.23.0",
    "wandb>=0.21.1",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform != 'linux'" },
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
